@@ -1,5 +1,5 @@
 LilyPond is a music typesetter.  It produces beautiful sheet music
-using a high level description file as input.  It is part of the GNU
-project.
+using a high level description file as input.  LilyPond is part of 
+the GNU Project.
 
 
