@@ -1,0 +1,8 @@
+\score{
+	\notes\relative c{
+		\include "stem-direction.sly";
+	}
+	\paper{
+		stem_default_neutral_direction=-1.0;
+	}
+}
